Refactored Stockpile